tests/errors/use_twice.orus
use tests.modules.hello_module
use tests.modules.hello_module

fn main() {
    hello_module.greet()
}
